force-app/main/default/objects/Dummy24__c/Dummy24__c.object-meta.xml
<CustomObject>
    <label>Dummy24</label>
    <nameField>
        <label>Dummy24 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy24</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>