force-app/main/default/objects/Dummy24__c/fields/FooBar089__c.field-meta.xml
<CustomField>
    <fullName>FooBar089__c</fullName>
    <label>FooBar089</label>
    <length>255</length>
    <type>Text</type>
</CustomField>