force-app/main/default/objects/Dummy24__c/fields/FooBar107__c.field-meta.xml
<CustomField>
    <fullName>FooBar107__c</fullName>
    <label>FooBar107</label>
    <length>255</length>
    <type>Text</type>
</CustomField>