force-app/main/default/objects/Dummy24__c/fields/FooBar146__c.field-meta.xml
<CustomField>
    <fullName>FooBar146__c</fullName>
    <label>FooBar146</label>
    <length>255</length>
    <type>Text</type>
</CustomField>